@@ -50,11 +50,11 @@ TELEMETRY_SLEEP_AFTER = 3*60
 
 FAST_POLL_INTERVAL = 1
 SLOW_POLL_INTERVAL = 10  # for values, that aren't that important
+VERY_SLOW_POLL_INTERVAL = 30
 IP_UPDATE_INTERVAL = 5
 QUIT_INTERVAL = 0.2
 SD_INTERVAL = 0.2
 SD_FILESCAN_INTERVAL = 60
-FLASH_AIR_INTERVAL = 30
 DIR_RESCAN_INTERVAL = 1
 PRINTER_BOOT_WAIT = 8
 SEND_INFO_RETRY = 5
